--- a/praha17/julia_examples.ipynb
+++ b/praha17/julia_examples.ipynb
@@ -18,7 +18,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Setup\n",
     "\n",
@@ -42,7 +45,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## First steps inside the notebook"
    ]
@@ -51,7 +57,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -63,7 +71,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -75,7 +85,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -87,7 +99,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -99,7 +113,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -110,7 +126,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Same as in Python we can can if b is a subset of a as `b < a`. But if you got used on the beuty of $\\in$ you might find it hard to settle for `<`. So let's define our first function "
    ]
@@ -119,7 +138,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -130,7 +151,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -140,7 +163,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## What is Julia ?\n",
     "+ Julia: A fresh approach to numerical computing, see [paper](http://arxiv.org/abs/1411.1607)\n",
@@ -159,7 +185,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Why do we need yet another language?\n",
     "\n",
@@ -174,7 +203,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Julia's approach\n",
     "+ Designed to be easy to write with performance close to C\n",
@@ -184,7 +216,10 @@
   },
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "              |     F|Julia |Python\t|R      |Matlab\t|Octave\t    |Mathm\t|JS\t    |Go\t    |LuaJIT\t|Java\n",
     "--------------|------|------|-------|-------|-------|-----------|-------|-------|-------|-------|----    \n",
@@ -199,14 +234,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Some benchmark problems of our own"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Project Euler problem 14. \n",
     "The following iterative sequence is defined for the set of positive integers:\n",
@@ -225,7 +266,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -259,7 +302,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -275,7 +320,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -284,14 +331,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Julia is done in about 0.5s, Python need ~24s. So with Julia I am onto the next problem. With Python it is back to the drawing board."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Julia fractal\n",
     "+ It is only approprate that we explore the Julia set\n",
@@ -302,7 +355,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -334,7 +389,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -363,7 +420,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -379,9 +438,455 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Python requires close to 5s to generate the fractals. With either of the Julia versions the execution time is close to 1s. Note that at this point we have two `julia` methods. Which one gets called when the code is run is our first encounter with _multiple dispatch_."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "# Writing code like Python\n",
+    "\n",
+    "+ Illustrate (not unrealistic) workflow by a made example of postprocessing \n",
+    "+ No type declarations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Reading from file. How many words in the MIT licence?\n",
+    "LICENCE = open(\"../LICENSE\")\n",
+    "content = lowercase(readstring(LICENCE))\n",
+    "words = split(content, r\"\\W\", keep=false)\n",
+    "close(LICENCE)\n",
+    "length(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# We could have done this with bash.\n",
+    "# Shell interoperatbility `(backtick)\n",
+    "cmd = pipeline(`cat ../LICENSE`, `wc -w`)\n",
+    "run(cmd)  # 172 vs 171, less than 1% error is okay:)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Are all these words unique?\n",
+    "unique = Dict()\n",
+    "for word in words\n",
+    "    unique[word] = get(unique, word, 0) + 1\n",
+    "end\n",
+    "length(keys(unique))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# What are the most common?\n",
+    "for (_, (k, v)) in zip(1:5, sort(collect(unique), by=last, rev=true))\n",
+    "    println(\"$(k) $(v)\")\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that collect unique makes a list by iterating over the dictionary. This iterations is over KEY-VALUE pairs. This is unlike Python. Let's see what else is different."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# iteration is over (key, values) pairs\n",
+    "for (key, value) in zip(1:4, collect(unique))\n",
+    "    println(\"$key => $value\")  # \"%.4g\" % (...)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# : is => in the dictionary construction\n",
+    "dict = Dict(1 => \"one\", 2 => \"two\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# in checks for (key, value) pair\n",
+    "haskey(dict, 1), (1 => \"en\") ∈ dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# String concatenation is done with *. With + the operation should be commutative, which is not the case here\n",
+    "\"Julia \" * \" Language\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# A direct consequence of this is ...\n",
+    "\"Julia\"^5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# / is for floating point division. Integer division is done by div\n",
+    "/(7, 4), div(7, 4), 7÷4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Indexing starts at one. The last element in range is included. 0..last not included has same length as 1..last included\n",
+    "a = [1, 2, 3]\n",
+    "try\n",
+    "    a[0]\n",
+    "catch BoundsError\n",
+    "    println(\"No no, a[1]=\", a[1], \" \", a[end] == a[3] == 3)\n",
+    "end\n",
+    "\n",
+    "collect(1:10)[10] == 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Convenience\n",
+    "x = 4\n",
+    "y = 2x  # no *\n",
+    "y == 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# More convenience. Save one \"for\"\n",
+    "[(i, j) for i in 1:4, j in \"abcd\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Contrast this with Python\n",
+    "A = reshape(collect(1:25), (5, 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# In numpy you get to iterate over rows of matrix (for vectorization). In Julia this is not default. \n",
+    "entries = [e for e in A]  #join(map(string, collect(A)), \", \")\n",
+    "# Moverover, columns are contiguous so accessing rows is not efficient.\n",
+    "# Finaly you iterate over values not pointers\n",
+    "for a in A\n",
+    "    a += 1\n",
+    "end\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for i in eachindex(A)\n",
+    "    A[i] += 1\n",
+    "end\n",
+    "A "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Column majored linear indexing\n",
+    "A[8] == 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally a quick look at functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# One lined named function definition\n",
+    "f(x, y) = 2x + 4y\n",
+    "f(1, 0) == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Implicit return statements\n",
+    "function f(name)\n",
+    "    if isequal(name, \"Miro\")\n",
+    "        return \"slav\"\n",
+    "    end\n",
+    "    \"!\"\n",
+    "end\n",
+    "\n",
+    "(f(\"Miro\"), f(\"You\")) == (\"slav\", \"!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Variable positional arguments\n",
+    "mysum(args...) = join(map(string, args), \"+\")\n",
+    "mysum(10, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "foo(x; op=+)=op(x, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "[foo(1), foo(2; op=-), foo(4; op=*)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Lambdas: remove vowels\n",
+    "vowels = Set(['a', 'e', 'i', 'o', 'u', 'y'])\n",
+    "map(word -> filter(l -> !(l ∈ vowels), word), keys(unique))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Multiline lambdas\n",
+    "map(word -> begin\n",
+    "    w = Set(word)\n",
+    "    cc = length(setdiff(w, vowels))\n",
+    "    vc = length(w) - cc\n",
+    "    (word, (vc, cc))\n",
+    "    end, keys(unique))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Interoperability with Python\n",
+    "+ The whole Python ecosystem can be reached via Julia package PyCall  (`Pkg.add(\"PyCall\")`)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "using PyCall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Let's load numpy and have it compute for us the eigenvalues of some matrix\n",
+    "@pyimport numpy.linalg as npla\n",
+    "A = diagm([1, 2, 3, 4])          # Julia matrix\n",
+    "eigv, eigw = npla.eig(A)         # Passed to python no copying\n",
+    "eigv  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Let's have numpy make the matrix and then Julia takes over for the actual work\n",
+    "@pyimport numpy as np\n",
+    "Apy = np.diag([1, 2, 3, 4])  # Note that this is Julia array passed to Numpy which comes back as a Julia matrix\n",
+    "eigvals(Apy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "using PyPlot\n",
+    "\n",
+    "# Julia has native packages for plotting, but why give up matplotlib\n",
+    "x = linspace(-1, 1, 100)\n",
+    "y = sin(2π*x)\n",
+    "figure()\n",
+    "plot(x, y)\n",
+    "xlabel(\"\\$x\\$\")  # Note that dollars have to be escaped for they have special role in Julia's string (interpolation)\n",
+    "show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# The speed stuff\n",
+    "# C interop.\n",
+    "# Linear algebra, fftw, MPI (julia dns), PETSc?\n",
+    "# macros\n",
+    "# staged\n",
+    "# Additional resources"
    ]
   },
   {
