--- a/praha17/julia_examples.ipynb
+++ b/praha17/julia_examples.ipynb
@@ -169,7 +169,7 @@
    },
    "source": [
     "## What is Julia ?\n",
-    "+ Julia: A fresh approach to numerical computing, see [paper](http://arxiv.org/abs/1411.1607)\n",
+    "+ Julia: A fresh approach to numerical computing, see [paper](http://arxiv.org/abs/1411.1607) and [thesis](https://github.com/julialang/julia/issues/8839)\n",
     "+ High level, dynamic, (dynamically) typed, general purpose language\n",
     "+ Free and open-source. MIT licence\n",
     "+ Went [viral](https://www.google.com/trends/explore#q=julia%20language) on Valentine's day 2014\n",
@@ -2158,7 +2158,7 @@
     "editable": true
    },
    "source": [
-    "And finally Domain Specific Languages. Suppose we want to write many if-elif-elif-....elif statements"
+    "And finally Domain Specific Languages, cf. UFL of FEniCS. Suppose we want to write many if-elif-elif-....elif statements"
    ]
   },
   {
@@ -2260,7 +2260,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -2276,11 +2278,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "function gauss_legendre(degree::UInt)\n",
+    "function gauss_legendre(degree::Int)\n",
     "  #=\n",
     "  The implementation is based on eigenvalues of the matrix T that is similar to\n",
     "  the Jacobi matrix J. Both are tridiagonal but the T matrix is symmetric and\n",
@@ -2301,25 +2305,42 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# function integrate{N}(f::PolyF{N})  if you want to see the code\n",
+    "# This is a bit like FIAT and FFC combined\n",
+    "using StaticArrays\n",
+    "\n",
+    "# function integrate{N}(f::PolyF{N}) # if you want to see the code\n",
     "@generated function integrate{N}(f::PolyF{N})\n",
     "    # Lets generate the quadrature points and weights \n",
     "    xq, wq = gauss_legendre(N)\n",
+    "    size = length(xq)\n",
+    "    # Other option\n",
+    "    #quote\n",
+    "    #    wq = SVector{$(size), Float64}($(wq))\n",
+    "    #    fxq = SVector{$(size), Float64}(f.($(xq)))\n",
+    "    #    sum(fxq.*wq)\n",
+    "    #end\n",
     "    quote\n",
-    "        sum((f.($(xq))).*($wq))\n",
+    "        sum(f.($(xq)).*$(wq))\n",
     "    end\n",
-    "end"
+    "end\n",
+    "\n",
+    "integrate(PolyF{10}(x -> cos(x)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -2331,7 +2352,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -2343,7 +2366,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -2355,7 +2380,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -2365,7 +2392,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Thanks for your attention"
    ]
